--- a/css/styles.css
+++ b/css/styles.css
@@ -550,7 +550,7 @@ color: var(--primary-text-color);
 }
 .portfolio .card:hover{
     display: block;
-    box-shadow: 1px 4px rgba(0, 0, 0, 0.25);
+    box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.25);
 }
 .card-title{
     margin-bottom: 4px;
